// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders button with loading animation 1`] = `
<footer
  class="footer  "
>
  <div
    class="container containerMobile"
  >
    <div
      class="container buttonRight buttonGroup"
    >
      <button
        class="button disabledButton Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
        data-garden-id="buttons.button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="container "
        >
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
          <div
            class="
      circle loadingAnimation
      bounce
      
    "
          />
        </div>
      </button>
    </div>
  </div>
</footer>
`;

exports[`render renders expected next button 1`] = `
<footer
  class="footer  "
>
  <div
    class="container containerMobile"
  >
    <div
      class="container buttonRight buttonGroup"
    >
      <button
        class="button Button__StyledButton-sc-12lsl5w-0 index__c-btn___1jmsn index__c-btn--primary___3nbMO lcPfmb"
        data-garden-id="buttons.button"
        data-garden-version="3.7.0"
        tabindex="0"
        type="button"
      >
        hello world
      </button>
    </div>
  </div>
</footer>
`;

exports[`renders the expected components 1`] = `
<div>
  <div>
    <div
      class="container flexContainer mobile"
      data-testid="scrollcontainer"
    >
      <header
        class="header userHeader"
      >
        <h1
          class="title titleMobile"
        >
          hello
        </h1>
      </header>
      <div
        class="content contentMobile"
      >
        <div>
          <div>
            <form
              class="form"
              novalidate=""
            >
              <h1
                class="searchTitle "
              >
                Search our Help Center
              </h1>
              <div
                class="mobileContainer Input-sc-4gf5js-0-div text__c-txt__input___2ZeOl text__c-txt__input--media___238Mn hytfkM"
                data-garden-id="textfields.input"
                data-garden-version="3.7.0"
              >
                <label
                  class="label Label-sc-129v0bx-0 text__c-txt__label___11SEJ jcOpUC"
                  data-garden-id="textfields.label"
                  data-garden-version="3.7.0"
                >
                  How can we help?
                </label>
                <input
                  aria-invalid="false"
                  autocapitalize="off"
                  class="searchInput mobileSearchInput Input-sc-4gf5js-0 text__c-txt__input___2ZeOl text__c-txt__input--bare___2auEk kdlara"
                  data-garden-id="textfields.input"
                  data-garden-version="3.7.0"
                  placeholder="How can we help?"
                  type="search"
                  value=""
                />
                <div
                  class="mobileNonSearchIconContainer MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
                  data-garden-id="textfields.media_figure"
                  data-garden-version="3.7.0"
                />
                <div
                  class="mobileSearchIcon MediaFigure-sc-1g79mon-0 text__c-txt__input--media__figure___Qcs4_ cqfywo"
                  data-garden-id="textfields.media_figure"
                  data-garden-version="3.7.0"
                >
                  <span
                    class="container icon Icon--search"
                    data-testid="Icon--search"
                    type="Icon--search"
                  >
                    widget-icon_search.svg
                  </span>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <footer
        class="footer  "
      />
    </div>
    <a
      class="
      logo
      
      fullscreen
      
    "
      href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
      tabindex="-1"
      target="_blank"
    >
      <span
        class="container icon Icon--zendesk"
        data-testid="Icon--zendesk"
        type="Icon--zendesk"
      >
        widget-icon_zendesk.svg
      </span>
      <span
        class="hidden"
      >
        zendesk
      </span>
    </a>
  </div>
</div>
`;
